Fixed column collapse

--- a/client/body/body.css
+++ b/client/body/body.css
@@ -27,10 +27,6 @@
     /* Non-prefixed version, currently supported by Chrome and Opera */
 }
 
-paper-progress {
-  transition: all 1.1s ease;
-}
-
 body {
     /* TODO: Need to fix this.. to a standard size */
     max-width: 100%;
