--- a/client/september/HerexamenColumn/failedColumn.css
+++ b/client/september/HerexamenColumn/failedColumn.css
@@ -1,4 +1,4 @@
-.failed-column .middle {
+.failedc .middle {
   height: 129px;
   display: flex;
   justify-content: center;
@@ -7,7 +7,7 @@
   position: relative;
 }
 
-.failed-column .middle h5 {
+.failedc .middle h5 {
   width: 100%;
   text-align: end;
   padding-right: 8px;
@@ -17,7 +17,7 @@
   bottom: 0;
 }
 
-.failed-column .eerste-failed {
+.failedc .eerste-failed {
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -25,7 +25,7 @@
   border-bottom: dotted 1px #ececec;
 }
 
-.failed-column .tweede-failed {
+.failedc .tweede-failed {
   width: 100%;
   display: flex;
   flex-direction: column;
